--- a/circle.yml
+++ b/circle.yml
@@ -1,5 +1,6 @@
 dependencies:
   override:
     - sudo apt-get update
+    - sudo apt-get dist-upgrade
     - sudo apt-get -y install vagrant
     - vagrant up
