--- a/circle.yml
+++ b/circle.yml
@@ -3,6 +3,6 @@ dependencies:
     - sudo apt-get update
     - sudo apt-get -y install vagrant
     - sudo apt-get -y remove vagrant
-    - curl -O https://dl.bintray.com/mitchellh/vagrant/vagrant_1.6.5_x86_64.deb
+    - wget https://dl.bintray.com/mitchellh/vagrant/vagrant_1.6.5_x86_64.deb
     - sudo dpkg -i vagrant_1.6.5_x86_64.deb
     - vagrant up
